[package]
name = "bevy_symbios_audio"
version = "0.1.0"
edition = "2024"
authors = ["Janus"]
description = "Algorithmic audio generator for Bevy."
license = "MIT"
readme = "README.md"
repository = "https://github.com/TheJanusStream/bevy_symbios_audio"
keywords = ["audio", "procedural", "generative", "simulation"]
categories = ["simulation", "game-development", "mathematics"]

[features]
default = []
egui = ["dep:bevy_egui"]

[dependencies]
bevy = { version = "0.18", features = ["wav"] }
bevy_egui = { version = "0.39", optional = true }
clap = { version = "4", features = ["derive"] }
rand = "0.9"
rand_chacha = "0.9"
rayon = "1.11"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
symbios-genetics = "0.2"

[dev-dependencies]
tempfile = "3"
criterion = "0.8"
bevy_egui = "0.39"

[[bin]]
name = "symbios-audio-cli"
path = "src/bin/symbios_audio_cli.rs"

[profile.bench]
debug = true
