[package]
name = "bevy_symbios_audio"
version = "0.2.1"
edition = "2024"
authors = ["Janus"]
description = "Algorithmic audio generator for Bevy."
license = "MIT"
readme = "README.md"
repository = "https://github.com/TheJanusStream/bevy_symbios_audio"
keywords = ["audio", "procedural", "generative", "simulation"]
categories = ["simulation", "game-development", "mathematics"]

[features]
default = []
egui = ["dep:bevy_egui", "dep:web-time"]

[dependencies]
bevy = { version = "0.18", features = ["wav"] }
bevy_egui = { version = "0.39", optional = true }
clap = { version = "4", features = ["derive"] }
rand = "0.9"
rand_chacha = "0.9"
rayon = "1.11"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
symbios-genetics = "0.2"
# Wall-clock seed source for the editor's "mutate" buttons; forwards to
# `std` on native and to the browser clock on wasm (std::time panics on
# wasm32-unknown-unknown). Only the egui editor needs it.
web-time = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
criterion = "0.8"
bevy_egui = "0.39"

[[bin]]
name = "symbios-audio-cli"
path = "src/bin/symbios_audio_cli.rs"

[[example]]
name = "patch_editor"
required-features = ["egui"]

[[example]]
name = "sequence_editor"
required-features = ["egui"]

[[bench]]
name = "bake"
harness = false

[profile.bench]
debug = true
